--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIC Café</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <style>
         * {
@@ -27,7 +27,7 @@
         header h1 {
             font-weight: 700;
             text-transform: capitalize;
-            text-shadow: 1px 1px 1px rgb(36, 183, 242), 2px 2px 1px rgb(57, 191, 245);
+            text-shadow: 1px 1px 1px rgb(234, 13, 13), 2px 2px 1px rgb(229, 19, 19);
         }
 
         .row {
@@ -60,6 +60,7 @@
         }
 
         .text {
+            width: 250px;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -186,6 +187,12 @@
                 width: 100%;
             }
         }
+
+        .remember{
+            display: flex;
+            padding: 10px;
+        }
+
     </style>
 </head>
 
@@ -197,7 +204,7 @@
                 <div class="col-md-6 side-image">
                     <!-- Image -->
                     <div class="text">
-                        <p>&ensp;&ensp;&nbsp; GIC Café<br>🤘 Order Now 🤘</p>
+                        <p>&ensp;&ensp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GIC Café<br>🤘 Make You Feel Refreshed Every day🤘</p>
                     </div>
                 </div>
 
@@ -207,30 +214,64 @@
                             <h1>Log in</h1>
                         </header>
 
-                        <form action="/tp16/task5" method="post">
+                        <div th:if="${param.error}">
+                            <div class="alert alert-danger">Invalid Username or Password !!!</div>
+                        </div>
+                        <div th:if="${param.logout}">
+                            <div class="alert alert-success">You have been logged out !!!</div>
+                        </div>
+
+                        <form method="post" th:action="@{/employee/login}">
                             <div class="input-field">
 
-                                <input type="text" class="input" id="username" name="username" required autocomplete="off">
-                                <label for="useranme" >Username</label>
+                                <input type="text" class="input" id="username" name="username" required
+                                    autocomplete="off">
+                                <label for="useranme">Username</label>
                             </div>
 
                             <div class="input-field">
-                                <input type="password" class="input" id="passwrod" name="password" required>
+                                <input type="password" class="input" id="password" name="password" required>
                                 <label for="password">Password</label>
                             </div>
 
                             <div class="input-field">
-                                <input type="submit" class="submit" id="submit" value="Login">
+                                <!-- <input type="submit" class="submit" id="submit" value="Login"> -->
+                                <button type="submit" class="submit" id="submit">Login</button>
                             </div>
 
-                            <div class="signup">
-                                <span>Don't have an anccount?<a href="#"> Sign up here</a></span>
+                            <div class="remember">
+                                <input type="checkbox" id='check' />
+                                <label style="padding-left: 10px;" for='check'>Remember me</label>
                             </div>
+
                         </form>
                     </div>
                 </div>
             </div>
         </div>
+        <script>
+            const set_username = document.getElementById('username')
+            const token = JSON.parse(localStorage.getItem("mytoken"))
+            set_username.value = token
+        </script>
+        <script>
+            document.querySelector('#update-form').addEventListener('submit', (e) => {
+                const check = document.getElementById('check')
+                if (check.checked) {
+                    const item_data = document.getElementById('username').value
+                    localStorage.setItem("mytoken", JSON.stringify(item_data))
+                } else {
+                    localStorage.removeItem("mytoken")
+                }
+            });
+        </script>
+        <script type="text/javascript">
+            window.onpageshow = function (event) {
+                if (event.persisted) {
+                    window.location.reload();
+                }
+            };
+        </script>
 
 </body>
 
