--- a/src/main/resources/templates/tableSelect.html
+++ b/src/main/resources/templates/tableSelect.html
@@ -1,71 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIC Café</title>
+    <title>Table Select</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Lexend&display=swap");
 
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
 
-        button{
+        button {
             font-family: 'Lexend', sans-serif;
         }
     </style>
 </head>
-<body class="flex justify-content items-center mx-20 my-20">
-    
-    <div class="w-full grid grid-cols-2 border-2 border-black">
-        <div class="w-full grid grid-cols-5 gap-4 mx-3 my-3 font-[-apple-system] text-3xl font-bold">
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">01</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">02</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">03</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">04</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">05</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">06</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">07</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">08</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">09</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">10</button>
 
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">11</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">12</button>
-            <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">13</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">14</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">15</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">16</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">17</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">18</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">19</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">20</button>
+<body class="truncate">
+    <div class="flex flex-col mx-20 my-20">
+        <div class="w-full grid grid-cols-2 border-2 border-black">
+            <div class="w-full grid grid-cols-5 gap-4 mx-3 my-3 font-[-apple-system] text-3xl font-bold">
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">01</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">02</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">03</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">04</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">05</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">06</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">07</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">08</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">09</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">10</button>
 
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">21</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">22</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">23</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">24</button>
-            <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">25</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">11</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">12</button>
+                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">13</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">14</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">15</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">16</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">17</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">18</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">19</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">20</button>
 
-        </div>
-
-        <div class="border-black border-l-2 py-28">
-            <p class="text-3xl font-bold text-center">Table Information</p>
-
-            <div class="ml-[150px] mt-[20px] w-full text-2xl">
-                <div class="w-[400px] grid grid-col-1">
-                    <p>Table: <span>&nbsp;&nbsp;&thinsp;02,</span></p>
-                    <p>Status: <span>&nbsp;&thinsp;available/busy/unpaid</span></p>
-                    <p>Orders: <span>&nbsp;Iceamericano (R x 1), Icemocha(L x 1)</span></p>
-                </div>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">21</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">22</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">23</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">24</button>
+                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">25</button>
 
             </div>
+
+            <div class="border-black border-l-2 py-28">
+                <p class="text-3xl font-bold text-center">Table Information</p>
+
+                <div class="ml-[150px] mt-[20px] w-full text-2xl">
+                    <div class="w-[400px] grid grid-col-1">
+                        <p>Table: <span>&nbsp;&nbsp;&thinsp;02,</span></p>
+                        <p>Status: <span>&nbsp;&thinsp;available/busy/unpaid</span></p>
+                        <p>Orders: <span>&nbsp;Iceamericano (R x 1), Icemocha(L x 1)</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="flex justify-start items-start m-[20px]">
+            <a href="/employee/homepage">
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xmlns:svgjs="http://svgjs.com/svgjs" width="100" height="100" x="0" y="0" viewBox="0 0 512 512.019"
+                    style="enable-background:new 0 0 512 512" xml:space="preserve" class="">
+                    <g>
+                        <path fill="#fc1100"
+                            d="M245.344 85.352h-32V10.687c0-4.203-2.453-8-6.293-9.73-3.883-1.727-8.344-1.043-11.457 1.75l-192 170.668c-2.262 2.027-3.586 4.926-3.586 7.977 0 3.05 1.324 5.953 3.586 7.98l192 170.668a10.645 10.645 0 0 0 11.457 1.77 10.706 10.706 0 0 0 6.293-9.75v-74.922c1.043.02 2.07.062 3.113.086 2.496.105 5.016.168 7.55.168 89.134 0 181.337 47.875 181.337 128 0 29.527-20.758 66.84-40.043 89.003-3.371 3.86-3.5 9.579-.34 13.61a10.679 10.679 0 0 0 8.383 4.055c1.683 0 3.37-.407 4.926-1.215 78.742-41.153 133.738-123.993 133.738-201.453 0-121.407-122.133-224-266.664-224zm0 0"
+                            data-original="#f44336" class=""></path>
+                        <path
+                            d="M373.344 512.02a10.679 10.679 0 0 1-8.383-4.055c-3.16-4.008-3.05-9.75.34-13.61 19.285-22.164 40.043-59.476 40.043-89.003 0-80.125-92.203-128-181.336-128-2.535 0-5.055-.063-7.551-.149-1.043-.02-2.07-.062-3.113-.086v74.903c0 4.203-2.453 8-6.293 9.726-3.84 1.75-8.344 1.024-11.457-1.77l-192-170.667a10.656 10.656 0 0 1-3.586-7.957c0-3.051 1.324-5.95 3.586-7.977l192-170.668c3.113-2.793 7.574-3.5 11.457-1.77a10.706 10.706 0 0 1 6.293 9.75v74.665h32c144.531 0 266.664 102.593 266.664 224 0 77.46-54.996 160.3-133.738 201.453a10.667 10.667 0 0 1-4.926 1.215zm-163.63-256.297c2.454 0 4.907.062 7.403.148 2.285.086 4.59.149 6.89.149 99.63 0 202.669 55.851 202.669 149.332 0 18.539-6.313 38.957-15.574 57.878 48.386-40.64 79.574-98.859 79.574-153.878 0-109.844-112.363-202.664-245.332-202.664h-42.668c-5.887 0-10.668-4.782-10.668-10.668V34.43L26.742 181.352l165.266 146.925v-61.59c0-5.484 4.16-10.093 9.644-10.624 2.668-.258 5.356-.34 8.063-.34zm0 0"
+                            fill="#000000" data-original="#000000" class=""></path>
+                    </g>
+                </svg>
+            </a>
         </div>
     </div>
-    
 </body>
+
 </html>
