--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -274,7 +274,7 @@
                     <button
                         class="w-full border border-black rounded-lg px-2 py-2 flex flex-row justify-center items-center text-center">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSybtff15JnWjwXu06ILM51CmHGJ2bhe5aphA&usqp=CAU"
-                            class="w-[100px] h-[100px] rounded-md"> <span class="px-3 font-normal hover:font-bold">Mlk
+                            class="w-[100px] h-[100px] rounded-md"> <span class="px-3 font-normal hover:font-bold">Milk
                             Coffee</span>
                     </button>
 
@@ -321,7 +321,7 @@
                     <button
                         class="w-full border border-black rounded-lg px-2 py-2 flex flex-row justify-center items-center text-center">
                         <img src="https://assets.bonappetit.com/photos/57aca51a1b334044149750c4/1:1/w_2560%2Cc_limit/iced-coffee-shakerato-1.jpg"
-                            class="w-[100px] h-[100px] rounded-md"> <span class="px-3 font-normal hover:font-bold">Mlk
+                            class="w-[100px] h-[100px] rounded-md"> <span class="px-3 font-normal hover:font-bold">Milk
                             Coffee</span>
                     </button>
 
