--- a/src/main/resources/templates/invoice.html
+++ b/src/main/resources/templates/invoice.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receipt</title>
+    <title> Document</title>
     <link href ="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPcaAq046MgnOM80zW1RWuH61DGLwZJEdKadq2F9CUG65" crossorigin="annoymous" />
+        integrity="sha384-rbsA2VBKQhggwzxH7pPcaAq046MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="annoymous" />
 
 </head>
 <style>
@@ -27,9 +24,9 @@
 </style>
 
 <body>
-    <form class="w-50 mx-auto at-5 mb-5">
+    <form class="w-50 mx-auto mt-5 mb-5">
         <div class="form-group">
-        <label for="formGroupExampleInput">Product Id</label>
+        <label for="formGroupExampleInput">Product ID</label>
         <input type="number" class="form-control" id="ids" />
         </div>
         <div class="form-group">
@@ -37,7 +34,7 @@
             <input type="text" class="form-control" id="product" />
         </div>
         <div class="form-group">
-            <label for="formGroupExampleInput2">Price</label>
+            <label for="formGroupExampleInput2">Price($)</label>
             <input type="number" class="form-control" id="prc" />
         </div>
         <div class="form-group">
@@ -46,10 +43,10 @@
             </div>
             <div class="form-group">
                 <label for="formGroupExampleInput2">Amount</label>
-                <input type="number" class="form-control" id="amnt" />
+                <input type="number" class="form-control" id="amnt" disabled />
             </div>
-            <button type="button" class="btn btn-warning m=2" onclick="addData()">
-                Add
+            <button type="button" class="btn btn-warning m-2" onclick="addData()">
+                ADD
             </button>
     </form>
     <hr>
@@ -66,11 +63,11 @@
                 <font color="white">+8552300000<br>
                     GICcafe@gmail.com<br>
                     Giccrew@gmail.com</font>
+            </td>
             <td>
                 <font color="white">ITC-Phnom Penh Campus<br>
                     Phnom Penh<br>
                     Cambodia</font>
-            </td>
             </td>
         </tr>
     </table>
@@ -79,37 +76,21 @@
     <table>
         <tr>
             <td width="5%"> </td>
-            <td width="500">Billed to</td>
-            <td width="500">&nbsp;&nbsp;&nbsp; Invoive Number</td>
-            <td width="200">&nbsp;&nbsp;&nbsp;</td>
+            <td width="500">&nbsp;&nbsp;&nbsp;Invoive Number:</td>
+            <td width="200">&nbsp;&nbsp;&nbsp;-------</td>
             <td width="200">Invoice Total</td>
         </tr>
         <tr>
             <td width="5%"> </td>
-            <td width="500">Client Number</td>
-            <td width="500">&nbsp;&nbsp;&nbsp; 10000001</td>
-            <td width="200"></td>
+            <td width="500">Client Number:</td>
+            <td width="200">&nbsp;&nbsp;&nbsp;-------</td>
             <td width="200"id="total-amount"><b>
                 </b></td>
         </tr>
         <tr>
             <td width="5%"> </td>
-            <td width="500">Client Address</td>
-            <td width="500">&nbsp;&nbsp;&nbsp;</td>
-            <td width="200">&nbsp;&nbsp;&nbsp;</td>
-            <td width="200">&nbsp;&nbsp;&nbsp;</td>
-        </tr>
-        <tr>
-            <td width="5%"> </td>
-            <td width="500"> City,State Country</td>
-            <td width="500">&nbsp;&nbsp;&nbsp; Date of issue</td>
-            <td width="200">&nbsp;&nbsp;&nbsp;</td>
-            <td width="200">&nbsp;&nbsp;&nbsp;</td>
-        </tr>
-        <tr>
-            <td width="10%"> </td>
-            <td width="500">ZIP CODE</td>
-            <td width="500">&nbsp;&nbsp;&nbsp;10/07/14</td>
+            <td width="500">&nbsp;&nbsp;&nbsp; Date of issue: </td>
+            <td width="200">&nbsp;&nbsp;&nbsp;-------</td>
             <td width="200">&nbsp;&nbsp;&nbsp;</td>
             <td width="200">&nbsp;&nbsp;&nbsp;</td>
         </tr>
@@ -119,7 +100,7 @@
     <table class="table">
         <thead id="tablehead">
             <tr>
-                <th id="ids">Id</th>
+                <th id="ids">ID</th>
                 <th>Product Name</th>
                 <th>Price</th>
                 <th>Quantity</th>
@@ -144,8 +125,8 @@
             <th width="20%"></th>
             <th width="20%"></th>
             <th width="20%"></th>
-            <th width="20%">Tax: </th>
-            <th width="20%"></th>
+            <th width="20%">Tax($):</th>
+            <th width="20%">0$</th>
         </tr>
         <tr>
             <th width="20%"></th>
@@ -167,17 +148,17 @@
             ids = document.getElementById("ids").value;
             price = document.getElementById("prc").value;
             quantity = document.getElementById("qty").value;
-            amount = price *quantity;
+            amount = price*quantity;
             document.getElementById("amnt").value = amount;
         }
 
         function addData(){
             prod_name = document.getElementById("product").value;
-            document.getElementById('newtr').innerHTML += '<tr><td>' + prod_name + '</td><td>' + price + '</td> <td>' + quantity + '</td><td>' + amount + '</td></tr>'
+            document.getElementById('newtr').innerHTML += '<tr><td>' + ids + '</td><td>' + prod_name + '</td><td>' + price + '</td><td>' + quantity + '</td><td>' + amount + '</td></tr>'
             document.getElementById("ids").value = " ";
             document.getElementById("product").value = " ";
             document.getElementById("prc").value = " ";
-            document.getElementById("amnt").value = " ";
+            document.getElementById("qty").value = " ";
             document.getElementById("amnt").value = " ";
             document.getElementById("subtotal-amount").innerHTML = price * quantity;
             document.getElementById("total-amount").innerHTML = price * quantity - tax;
