--- a/src/main/resources/templates/tableSelect.html
+++ b/src/main/resources/templates/tableSelect.html
@@ -25,33 +25,60 @@
     <div class="flex flex-col mx-20 my-20">
         <div class="w-full grid grid-cols-2 border-2 border-black">
             <div class="w-full grid grid-cols-5 gap-4 mx-3 my-3 font-[-apple-system] text-3xl font-bold">
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">01</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">02</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">03</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">04</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">05</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">06</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">07</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">08</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">09</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">10</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">
+                    01
+                </button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">02</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">03</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">04</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">05</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">06</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">07</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">08</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">09</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">10</button>
 
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">11</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">12</button>
-                <button class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center">13</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">14</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">15</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">16</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">17</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">18</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">19</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">20</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">11</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">12</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-green-600 border-2 border-black text-white text-center hover:border-red-500">13</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">14</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">15</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">16</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">17</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">18</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">19</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">20</button>
 
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">21</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">22</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">23</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">24</button>
-                <button class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center">25</button>
+                <!-- <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">21</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">22</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">23</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">24</button>
+                <button onclick="myFunction(this)"
+                    class="w-20 h-20 bg-red-600 border-2 border-black text-white text-center hover:border-red-500">25</button> -->
 
             </div>
 
@@ -60,9 +87,9 @@
 
                 <div class="ml-[150px] mt-[20px] w-full text-2xl">
                     <div class="w-[400px] grid grid-col-1">
-                        <p>Table: <span>&nbsp;&nbsp;&thinsp;02,</span></p>
-                        <p>Status: <span>&nbsp;&thinsp;available/busy/unpaid</span></p>
-                        <p>Orders: <span>&nbsp;Iceamericano (R x 1), Icemocha(L x 1)</span></p>
+                        <p>Table : <span class="ml-5" id="number"></span></p>
+                        <p>Status : <span class="ml-3">available/busy/unpaid</span></p>
+                        <p>Orders : <span class="ml-2">Iceamericano (R x 1), Icemocha(L x 1)</span></p>
                     </div>
                 </div>
             </div>
@@ -70,7 +97,7 @@
         <div class="flex justify-start items-start m-[20px]">
             <a href="/employee/homepage">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                    xmlns:svgjs="http://svgjs.com/svgjs" width="100" height="100" x="0" y="0" viewBox="0 0 512 512.019"
+                    xmlns:svgjs="http://svgjs.com/svgjs" width="64" height="64" x="0" y="0" viewBox="0 0 512 512.019"
                     style="enable-background:new 0 0 512 512" xml:space="preserve" class="">
                     <g>
                         <path fill="#fc1100"
@@ -84,6 +111,24 @@
             </a>
         </div>
     </div>
+
+    <script>
+        function myFunction(element) {
+            document.getElementById("number").innerHTML = element.innerHTML;
+            () => {
+                var x = document.getElementById("mySelect").value;
+                document.getElementById("demo").innerHTML = "Your status is now " + x;
+
+                if (x == "available") {
+                    document.getElementById("myButton").style.backgroundColor = "green";
+                } else if (x == "busy") {
+                    document.getElementById("myButton").style.backgroundColor = "red";
+                } else if (x == "unpaid") {
+                    document.getElementById("myButton").style.backgroundColor = "rgb(255, 247, 0)";
+                }
+            }
+        }
+    </script>
 </body>
 
 </html>
